--- a/calc.css
+++ b/calc.css
@@ -34,12 +34,10 @@ body {
     width: 500px;
 }
 
-
-.calculator * {
-    box-shadow: 0px 0px 3px grey;
-}
-
 .display {
+    background-color: rgb(232, 232, 232);
+    border: .5px solid rgb(141, 141, 141);
+    color: rgba(52, 52, 52, 0.925);
     font-size: 60pt;
     grid-column-end: span 4;
     padding: 6px;
@@ -53,6 +51,7 @@ body {
 .button {
     align-items: center;
     border-radius: 8px;
+    box-shadow: 0px 0px 3px grey;
     display: flex;
     font-size: 21pt;
     justify-content: center;
